# open-rust

./: README.md
.github/workflows/: check.yml
proto-packet/proto-packet-core/: Cargo.toml  README.md
proto-packet/proto-packet-core/src/tree/: mod.rs
proto-packet/proto-packet-core/src/tree/message/: message.rs  message_field.rs  mod.rs  with_field_number.rs  with_message_fields.rs
util/code-gen/: Cargo.toml  README.md
util/code-gen/src/: lib.rs
util/code-gen/src/core/: code_buffer.rs  is_empty.rs  mod.rs  to_static_str.rs  with_name.rs
util/code-gen/src/expression/: expression.rs  literal.rs  mod.rs
util/code-gen/src/rust/: mod.rs
util/code-gen/src/rust/exp/: field_exp.rs  mod.rs  set_field_exp.rs
util/code-gen/src/rust/function/: function.rs  mod.rs  receiver.rs  signature.rs  with_functions.rs  with_receiver.rs  with_result.rs  with_signature.rs
util/code-gen/src/rust/function/util/: gen_getter_fn_copy.rs  gen_setter_fn_copy.rs  mod.rs
util/code-gen/src/rust/source/: mod.rs  source.rs
util/code-gen/src/rust/structs/: impl_block.rs  mod.rs  struct_field.rs  structure.rs  with_derives.rs  with_struct_fields.rs
util/code-gen/src/rust/util/: access.rs  comment_type.rs  mod.rs  with_access.rs  with_comment.rs
util/code-gen/src/rust/var/: mod.rs  primitive_type.rs  type_tag.rs  var.rs  var_assign.rs  with_type_tag.rs  with_var.rs  with_var_params.rs
util/code-gen/src/statement/: empty_line.rs  expression_statement.rs  mod.rs  semi.rs  statement.rs  with_statements.rs
