[package]
name = "proto-packet-core"
version = "0.0.0"
description = "This library holds the core logic of the ProtoPacket framework."
readme = "README.md"
repository = "https://github.com/nikdeapen/open-rust/proto-packet/proto-packet-core"
homepage = "https://github.com/nikdeapen/open-rust/proto-packet/proto-packet-core"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"
